feat: Implement role detection from URL in AppContext and update user role accordingly
fix: Change application status from Pending to Approved in applications.json

feat: Enhance AdminDashboard with tutor performance metrics and update chart titles

refactor: Improve layout and styling in AdminSessions and TutorSessions pages

style: Adjust spacing and alignment in TutorTransactions for better UI consistency

feat: Add utility function to determine user role based on URL path

--- a/src/data/applications.json
+++ b/src/data/applications.json
@@ -15,7 +15,7 @@
     "studentId": 1,
     "subjects": ["Physics I"],
     "proposedRate": 120,
-    "status": "Pending",
+    "status": "Approved",
     "dateApplied": "2025-04-16",
     "resume": "resume_link.pdf",
     "coverLetter": "I'm passionate about physics and want to help first-year students understand the fundamental concepts.",
