--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
+    "@lottiefiles/dotlottie-react": "^0.13.3",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
