--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@lottiefiles/dotlottie-react": "^0.13.3",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "firebase": "^11.6.0",
+    "framer-motion": "^12.7.4",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
